trying different background types and colours to give correct contrast to site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 body {
-    background-image: url(../images/bgnew.jpg);
+    background-image: url(../images/bg-5.jpg);
     width: 100%;
     background-repeat:no-repeat;
     background-size: cover;
@@ -75,6 +75,12 @@ body {
 .spacing-header {
     width: 100%;
     height: 3rem;
+    opacity: 0.0;
+}
+
+.spacing-2{
+    width: 100%;
+    height: 1.5rem;
     opacity: 0.0;
 }
 
